# tax-sii-crypto

./: .env.example  LICENCE.txt  README.md  pyproject.toml
.github/: FUNDING.yml
src/: enums.py  errors.py  main.py  utils.py
src/db/: tortoise_config.py  utils.py
src/db/migrations/models/: 0_20250407160847_init.py  1_20250407174134_add-usd-to-clp-conversion.py  2_20250407174345_add-usd-to-clp-coversion-uniqueness.py  3_20250408003947_rename_rates_table.py
src/etls/buda_excel_etl/: etl.py  loader.py  transformer.py
src/etls/sii_usd_value/: etl.py  extractor.py  loader.py  transformer.py
src/etls/sii_usd_value/data/: Dolar 2021.csv  Dolar 2022.csv  Dolar 2023.csv  Dolar 2024.csv
src/models/: Operation.py  Transaction.py  usd_to_clp_rates.py
src/parsers/: excel.py
src/reports/buy_sells/: main.py  types.py
